--- a/claro/package.json
+++ b/claro/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "chart.js": "^4.4.9",
+    "chartjs-chart-geo": "^4.3.4",
     "next": "15.3.1",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
