--- a/claro/package.json
+++ b/claro/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "chart.js": "^4.4.9",
     "chartjs-chart-geo": "^4.3.4",
+    "claro": "file:",
     "next": "15.3.1",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-simple-maps": "^3.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
