--- a/claro/package.json
+++ b/claro/package.json
@@ -9,18 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "chartjs-chart-geo": "^4.3.4",
     "claro": "file:",
     "lucide-react": "^0.510.0",
-    "axios": "^1.9.0",
     "next": "15.3.1",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0",
-    "react-simple-maps": "^3.0.0"
-
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
